# team-international-test

./: .gitignore  README.md  main.py  pyproject.toml
technical_test/: __init__.py  constants.py  data_capture.py  decorators.py  exceptions.py
tests/: test_data_capture.py
